# anti-debugging-mingw-x64

./: .gitignore  AntiDebugMethod.cpp  CMakeLists.txt  Dockerfile  Makefile  README.md  anti-debugging.cpp  compile_flags.txt  mingw-toolchain.cmake
Methods/: MethodGetLocalTime.h  MethodGetParentProcess.h  MethodGetTickCount.hpp  MethodLFH.hpp  MethodPEBBeingDebugged.h  MethodThreadHideFromDebugger.h  MethodTrapFlag.hpp
anti-debugging/: AntiDebugMethod.cpp  AntiDebugMethod.hpp  CMakeLists.txt  anti-debugging.cpp  heavens_gate.asm
anti-debugging/Methods/: MethodGetParentProcess.hpp  MethodHeapFlag.hpp  MethodLFH.hpp  MethodNtGlobalFlag.hpp  MethodPEBBeingDebugged.hpp  MethodQPC.hpp  MethodThreadHideFromDebugger.hpp  MethodUnhandledException.hpp  MethodWow64PEB.hpp
anti-debugging/Resources/: anti-debugging.rc
